--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <div class="loading"></div>
 
 <body>
-    <script src="./js/question-2.js"></script>
+    <script src="js/question-2.js"></script>
+    <script src="js/question-1.js"></script>
 </body>
 
 </html>
